--- a/css/snake.css
+++ b/css/snake.css
@@ -43,3 +43,14 @@
   background-color: #efe;
   width: 800px
 }
+
+#result{
+  position: absolute;
+  top: -450px;
+  right: 340px;
+  width: auto;
+  background-color: tomato;
+  border-radius: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
